<resources>
    <string name="app_name">列车告警系统</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入您的账号</string>
    <string name="prompt_password">请输入您的密码</string>
    <string name="action_sign_in">立即使用</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="cancel">取消</string>
    <string name="perm_tip">
        当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="setting">setting</string>

    <string name="setting_login_out">退出登录</string>
    <string name="setting_ensure_out_login_msg">确定要退出程序吗？</string>
    <string name="version">V </string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_password">请输入新密码</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="please_input_password_again">请再次输入新密码</string>
    <string name="phone_number">手机号：</string>
    <string name="new_password">新密码：</string>
    <string name="old_password">旧密码：</string>
    <string name="ensure_password">确认新密码：</string>
    <string name="ensure">确认</string>
    <string name="captcha_number">短信验证码：</string>
    <string name="get_captcha">获取验证码</string>
    <string name="please_input_captcha">请输入验证码</string>
    <string name="welcome_use_app">您好！欢迎使用</string>
    <string name="app_description">列车接近告警APP</string>
    <string name="forget_password">忘记密码?</string>
    <string name="i_agree">我已阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="message">公告</string>
    <string name="notification">告警</string>
    <string name="self">我的</string>
    <string name="user_icon">用户头像</string>
    <string name="icon">icon图标</string>
    <string name="version_number">版本号：</string>
    <string name="out_login">退出登录</string>
    <string name="change_password">修改密码</string>
    <string name="description_notification_icon">通知公告图标</string>
    <string name="normal_notice">普通公告</string>
    <string name="notice_small_title">2020年电务段安全知识培训讲座</string>
    <string name="notice_detail">内容：Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod ......</string>
    <string name="delete_notice_icon">删除一条通知item的图标</string>
    <string name="notify_icon">通知的图标</string>
    <string name="network_disconnected">网络已断开</string>
    <string name="network_connected">网络已连接</string>


    <string name="channel_critical">通知公告</string>
    <string name="background">程序后台运行</string>
    <string name="channel_default">Default events</string>
    <string name="channel_low">Low events</string>
    <string name="channel_media">Media events</string>
</resources>
