<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_page_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        style="@style/MyTextDescriptionEdit"
        android:layout_marginTop="20dp"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/et_old_pwd"
        style="@style/MyEditPublicType"
        android:hint="@string/please_input_old_pwd"
        android:inputType="number"
        android:maxLength="11"
        android:importantForAutofill="no" />

    <TextView
        style="@style/MyTextDescriptionEdit"
        android:layout_marginTop="15dp"
        android:text="@string/new_password" />


    <EditText
        android:id="@+id/et_new_pwd"
        style="@style/MyEditPublicType"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:maxLength="18"
        android:importantForAutofill="no" />


    <TextView
        style="@style/MyTextDescriptionEdit"
        android:layout_marginTop="15dp"
        android:text="@string/ensure_password" />


    <EditText
        android:id="@+id/et_new_pwd_again"
        style="@style/MyEditPublicType"
        android:hint="@string/please_input_password_again"
        android:inputType="textPassword"
        android:maxLength="18"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_submit_pwd"
        style="@style/MyEnsureButton"
        android:layout_marginTop="100dp"
        android:text="@string/ensure" />

</LinearLayout>